# hacking-ar-drone

./: .gitignore  README.md
MATLAB/: changes.txt
MATLAB/test_sim/: flash_model1  flash_model1.slx  flash_model1_sfun.mexa64
SPtest_grt_rtw/: SPtest.bat  SPtest.h  SPtest.mk  SPtest_private.h  SPtest_types.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  defines.txt  modelsources.txt  rtmodel.h  rtw_proj.tmw
SPtest_grt_rtw/html/: SPtest_c.html  SPtest_codegen_rpt.html  SPtest_contents.html  SPtest_h.html  SPtest_interface.html  SPtest_private_h.html  SPtest_subsystems.html  SPtest_survey.html  SPtest_types_h.html  contents_file.tmp  rt_logging_c.html  rtmodel_h.html
ardrone/: .gitignore  Makefile
ardrone-2/attitude/: CMakeLists.txt  attitude.cpp  moving_average.c
ardrone-2/fly/: CMakeLists.txt  controls.h  controlthread.c  controlthread.h  flyparams.c  flyparams.h  main_fly.c
ardrone-2/fly/control_strategies/: pid_strategy.c  pid_strategy.h
ardrone-2/horizontal_velocities/: CMakeLists.txt  horizontal_velocities.c  (+1 more)
control_components/: SPtest-1.c  atcomproxy  atcomproxy.c  atcomproxy_generic  atcomproxy_generic.c  atcomproxy_hover  atcomproxy_hover.c  atcomproxy_led  atcomproxy_led.c  atcomproxy_led_arm  atcomproxy_takeOffAndLand  atcomproxy_takeOffAndLand.c  led_green  led_green.c  led_red  led_red.c  takeOffAndLand  takeOffAndLand.c  test  test.c  test_arm
flash_led/: flash.c  flash_arm  howtocompile.txt  main_gpio.c  test_arm
matlab_scripts/: ardrone_unixinstaller.m  ardrone_unixreinstaller.m
scripts/: front.bin.1  getUyvy  uyvyToBmp
(+135 files in other folders)
